--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -8,3 +8,25 @@ h4 { margin-bottom: 0.5em; }
 
 .smaller ol { font-size: 0.8em; }
 .btns { text-align: right; }
+
+blockquote {
+  color: #333;
+  background: #d4ecf5;
+  border-left: 10px solid #00adef;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #00adef;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display inline;
+}
+
+p, li { line-height: 1.2; }
